# dotfiles

./: .bash-preexec.sh  .bash_aliases  .bash_profile  .bashrc  .env  .gitconfig  .gitconfig-codezarre  .gitconfig-rust  .gitconfig-work  .gitconfig_anoptyk  .gitconfig_codezarre  .gitconfig_python  .gitignore_global  .gitmodules  .profile  .pythonrc.py  .urls  README.md  pyproject.toml  pythonrc.py  pythonrc_manager
.cargo/: config.toml
.config/: starship.toml
.config/Code/User/: keybindings.json  settings.json
.config/atuin/: config.toml
.config/helix/: config.toml
.github/: dependabot.yml
.irssi/: config
