[project]
name = "bswck-dotfiles"
readme = "README.md"
description = "Personal dotfiles of bswck"
authors = [{ name = "Bartosz Sławecki", email = "bartosz@ilikepython.com" }]
requires-python = ">=3.9"
version = "0.1.0"
dependencies = [
    "snoop>=0.6.0",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "pre-commit>=4.2.0", "ruff>=0.11.8"]
test = [
    "detect-test-pollution>=1.2.0",
    "hypothesis>=6.131.0",
    "inline-snapshot>=0.20.8",
    "pytest>=8.3.4",
    "pytest-accept>=0.1.12",
    "pytest-mock>=3.14.0",
    "pytest-subtests>=0.14.1",
    "pytest-sugar>=1.0.0",
]
types = []
docs = [
    "markdown-exec>=1.10.3",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.13",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.10",
]

[tool.uv]
required-version = "~=0.8.3"
default-groups = ["dev", "test", "types", "docs"]

[tool.uv.workspace]
members = [
    "Rust/pleno/foobar",
    "Law/ajdu",
]

[tool.mypy]
strict = true
explicit_package_bases = true
exclude = ["build/", "docs/"]
disable_error_code = ["import-untyped", "no-any-return"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib", "--doctest-modules"]

[tool.ruff.lint]
exclude = ["**samples/**"]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "D203",    # 1 blank line required before class docstring
    "D212",    # Multi-line docstring summary should start at the second line
    "FIX002",  # Line contains TODO, consider resolving the issue
    "ISC001",  # Implicitly concatenated string literals on one line
    "C901",    # Function is too complex
    "COM812",  # Trailing comma missing
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`
    "D100",    # Missing documentation (Public module)
    "D101",    # Missing documentation (Public class)
    "D102",    # Missing documentation (Public method)
    "D103",    # Missing documentation (Public function)
    "D104",    # Missing documentation (Public package)
    "D105",    # Missing documentation (Magic method)
    "D107",    # Missing documentation (__init__)
    "S101",    # Use of `assert` detected
    "TD003",   # Missing issue link on the line following this TODO
    "F403",    # Wildcard imports used
    "TC",      # Move third-party import into a type-checking block
    "SLF001",  # Private member accessed
    "PTH",     # Pathlib lints
]
